remove unnecessary quotes

--- a/samTemplate.yaml
+++ b/samTemplate.yaml
@@ -11,6 +11,6 @@ Resources:
         RootHandler:
           Type: Api
           Properties:
-            Path: '/'
+            Path: /
             Method: GET
 
