Update handler route and buildspec

--- a/buildspec.yml
+++ b/buildspec.yml
@@ -1,7 +1,11 @@
 version: 0.1
 phases:
-  install:
+  pre_build:
     commands:
+      - go get -u ./...
+  build:
+    commands:
+      - go build -o hello-world/hello-world ./hello-world
       - aws cloudformation package --template-file template.yaml --s3-bucket vconcepcion-test --output-template-file packaged.yaml
 artifacts:
   type: zip
