--- a/buildspec.yml
+++ b/buildspec.yml
@@ -1,11 +1,7 @@
 version: 0.1
 phases:
-  pre_build:
+  install:
     commands:
-      - go get -u ./...
-  build:
-    commands:
-      - go build -o hello-world/hello-world ./hello-world
       - aws cloudformation package --template-file template.yaml --s3-bucket vconcepcion-test --output-template-file packaged.yaml
 artifacts:
   type: zip
