--- a/buildspec.yml
+++ b/buildspec.yml
@@ -1,11 +1,47 @@
-version: 0.1
+version: 0.2
+env:
+  variables:
+    # This S3 bucket is used to store the packaged Lambda deployment bundle.
+    # Make sure to provide a valid S3 bucket name (it must exist already).
+    # The CodeBuild IAM role must allow write access to it.
+    S3_BUCKET: "vconcepcion-test"
+    PACKAGE: "github.com/vconcepcion/lambda_hello_world"
+
 phases:
   install:
     commands:
-      - aws cloudformation package --template-file template.yaml --s3-bucket vconcepcion-test --output-template-file packaged.yaml
+      # AWS Codebuild Go images use /go for the $GOPATH so copy the
+      # application source code into that directory structure.
+      - mkdir -p "/go/src/$(dirname ${PACKAGE})"
+      - ln -s "${CODEBUILD_SRC_DIR}" "/go/src/${PACKAGE}"
+      # Print all environment variables (handy for AWS CodeBuild logs)
+      - env
+      # Install golint
+      - go get -u github.com/golang/lint/golint
+
+  pre_build:
+    commands:
+      # Make sure we're in the project directory within our GOPATH
+      - cd "/go/src/${PACKAGE}"
+      # Fetch all dependencies
+      - go get -t ./...
+      # Ensure that the code passes all lint tests
+      #- golint -set_exit_status
+      # Check for common Go problems with 'go vet'
+      #- go vet .
+      # Run all tests included with the application
+      #- go test .
+
+  build:
+    commands:
+      # Build the go application
+      - go build -o main
+      # Package the application with AWS SAM
+      - aws cloudformation package --template-file template.yaml --s3-bucket ${S3_BUCKET} --output-template-file packaged.yaml
+
 artifacts:
   type: zip
   files:
-    - template.yaml
-    - packaged.yaml
+	- template.yaml
+  - packaged.yml
 
