--- a/buildspec.yml
+++ b/buildspec.yml
@@ -24,7 +24,7 @@ phases:
       # Make sure we're in the project directory within our GOPATH
       - cd "/go/src/${PACKAGE}"
       # Fetch all dependencies
-      - go get -t ./...
+      #- go get -t ./...
       # Ensure that the code passes all lint tests
       #- golint -set_exit_status
       # Check for common Go problems with 'go vet'
