Don't run golint

--- a/buildspec.yml
+++ b/buildspec.yml
@@ -26,7 +26,7 @@ phases:
       # Fetch all dependencies
       - go get -t ./...
       # Ensure that the code passes all lint tests
-      - golint -set_exit_status
+      #- golint -set_exit_status
       # Check for common Go problems with 'go vet'
       #- go vet .
       # Run all tests included with the application
