--- a/buildspec.yml
+++ b/buildspec.yml
@@ -35,7 +35,7 @@ phases:
   build:
     commands:
       # Build the go application
-      - go build -o hello-world hello-world/main.go
+      - go build -o main /main.go
       # Package the application with AWS SAM
       - aws cloudformation package --template-file template.yaml --s3-bucket ${S3_BUCKET} --output-template-file packaged.yaml
 
