--- a/buildspec.yml
+++ b/buildspec.yml
@@ -12,8 +12,8 @@ phases:
     commands:
       # AWS Codebuild Go images use /go for the $GOPATH so copy the
       # application source code into that directory structure.
-      - mkdir -p "/go/src/$(dirname ${PACKAGE})"
-      - ln -s "${CODEBUILD_SRC_DIR}" "/go/src/${PACKAGE}"
+      #- mkdir -p "/go/src/$(dirname ${PACKAGE})"
+      #- ln -s "${CODEBUILD_SRC_DIR}" "/go/src/${PACKAGE}"
       # Print all environment variables (handy for AWS CodeBuild logs)
       - env
       # Install golint
@@ -22,7 +22,7 @@ phases:
   pre_build:
     commands:
       # Make sure we're in the project directory within our GOPATH
-      - cd "/go/src/${PACKAGE}"
+      #- cd "/go/src/${PACKAGE}"
       # Fetch all dependencies
       - go get -t ./...
       # Ensure that the code passes all lint tests
@@ -35,14 +35,12 @@ phases:
   build:
     commands:
       # Build the go application
-      - go build -o main hello-world/main.go
+      - go build -o main
       # Package the application with AWS SAM
       - aws cloudformation package --template-file template.yaml --s3-bucket ${S3_BUCKET} --output-template-file packaged.yaml
 
 artifacts:
-  type: zip
   files:
     - main
-    - template.yaml
     - packaged.yaml
 
