--- a/template.yaml
+++ b/template.yaml
@@ -16,6 +16,7 @@ Resources:
     Properties:
       Handler: main
       Runtime: go1.x
+      AutoPublishAlias: live
       DeploymentPreference:
         Type: Canary10Percent5Minutes
       Tracing: Active # https://docs.aws.amazon.com/lambda/latest/dg/lambda-x-ray.html
